--- a/2nd/app/src/main/res/layout/activity_tips.xml
+++ b/2nd/app/src/main/res/layout/activity_tips.xml
@@ -10,6 +10,7 @@
     <RelativeLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
+        android:background="@color/colorBackground"
         android:layout_height="45dp">
 
         <TextView
@@ -18,7 +19,7 @@
             android:layout_centerInParent="true"
             android:fontFamily="sans-serif"
             android:text="消息"
-            android:textColor="#ffffff"
+            android:textColor="#FFFFFF"
             android:textSize="18sp" />
     </RelativeLayout>
 
