--- a/2nd/app/src/main/res/values/styles.xml
+++ b/2nd/app/src/main/res/values/styles.xml
@@ -16,4 +16,14 @@
         <item name="android:layout_gravity">end|bottom</item>
         <item name="android:visibility">invisible</item>
     </style>
+    <style name="InputedMessage">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_centerInParent">true</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:gravity">right</item>
+    </style>
+
 </resources>
