--- a/2nd/app/src/main/res/values/styles.xml
+++ b/2nd/app/src/main/res/values/styles.xml
@@ -17,10 +17,11 @@
         <item name="android:visibility">invisible</item>
     </style>
     <style name="InputedMessage">
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:padding">16dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_centerInParent">true</item>
-        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:fontFamily">casual</item>
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">18sp</item>
         <item name="android:gravity">right</item>
