--- a/2nd/app/src/main/res/layout/activity_main.xml
+++ b/2nd/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
     <Button
-        android:id="@+id/btn_exercises1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Exercises1"
-        android:textAllCaps="false"
-        android:textSize="18sp" />
+            android:id="@+id/btn_exercises1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Exercises1"
+            android:textAllCaps="false"
+            android:textSize="18sp"/>
 
     <Button
         android:id="@+id/btn_exercises2"
