--- a/6th/app/src/main/res/layout/item_note.xml
+++ b/6th/app/src/main/res/layout/item_note.xml
@@ -6,6 +6,7 @@
                 android:layout_height="wrap_content"
                 android:paddingBottom="8dp"
                 android:paddingLeft="12dp"
+                android:id="@+id/item_background"
                 android:paddingTop="8dp">
 
     <CheckBox
